Changes in Version 2.3-1

  o Added new interface exams2ilias() for the open-source ILIAS learning
    management system (http://www.ilias.de/). This is essentially a
    convenience wrapper to exams2qti12(), tweaking a few defaults and
    employing a somewhat modified XML template.

  o When using exams2html(..., mathjax = TRUE) for testing purposes,
    mathjax.rstudio.com is used now rather than cdn.mathjax.org which
    is currently redirecting and will eventually be shut down completely.

  o Bug fixes and improvements in HTML transformers:
    - Only ="file.ext" (with =") is replaced now by Base 64 version.
    - href="file.ext" is replaced by href="file.ext" download="file.ext"
      prior to Base 64 replacement.
    - alt="file.ext" and download="file.ext" are preserved without
      Base 64 encoding.

  o In exams2html() and other interfaces based on make_exercise_transform_html()
    base64 = TRUE now uses Base 64 encoding for all file extensions (known
    to the package) whereas base64 = NULL only encodes image files (previous
    default behavior).

  o Fixed the support for 'nsamp' argument in exams2nops(). Furthermore,
    current limitations of exams2nops() are pointed out more clearly and
    error messages and edge cases caught.

  o Include further file URIs for Base 64 supplements, in particular .sav
    for SPSS data files.

  o New language support in exams2nops: Croatian (hr, contributed by
    Krunoslav Juraic), Danish (da, contributed by Tue Vissing Jensen & Jakob
    Messner), Slovak (sk, contributed by Peter Fabsic), Swiss
    German (gsw, contributed by Reto Stauffer), Turkish (tr, contributed by
    Emrah Er).

  o include_supplement(..., dir = "foo") now also works if "foo" is
    sub-directory to the exercise directory (edir).

  o Allow varying points within a certain exercise in nops_eval().

  o exams2blackboard(..., base64 = FALSE, ...) was erroneously ignored.