@@ -67,6 +67,7 @@ export(
   "exams2qti21",
   "make_itembody_qti21",
   "exams2ilias",
+  "exams2openolat",
 
   ## Blackboard driver (only partially QTI-based)
   "exams2blackboard",
