@@ -5,6 +5,11 @@ Changes in Version 2.3-1
     convenience wrapper to exams2qti12(), tweaking a few defaults and
     employing a somewhat modified XML template.
 
+  o Added new interface exams2openolat() for the open-source OpenOLAT learning
+    management system (http://www.openolat.com/). This is only a convenience
+    wrapper to exams2qti12() or exams2qti21() with some dedicated tweaks
+    for optimizing MathJax output for OpenOLAT.
+
   o When using exams2html(..., mathjax = TRUE) for testing purposes,
     mathjax.rstudio.com is used now rather than cdn.mathjax.org which
     is currently redirecting and will eventually be shut down completely.
